--- a/BlazorPeliculas/Client/_Imports.razor
+++ b/BlazorPeliculas/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorPeliculas.Client
 @using BlazorPeliculas.Client.Shared
-@using BlazorPeliculas.Client.Helpers
+@using BlazorPeliculas.Client.Helpers@*//lo vuel egeneral para toda la aplicacion*@
+@using BlazorPeliculas.Shared.Entidades 
