--- a/BlazorPeliculas/Client/Pages/Index.razor
+++ b/BlazorPeliculas/Client/Pages/Index.razor
@@ -59,10 +59,10 @@ else
                 <p>Esta es la ultima pelicula</p>
             }
 
-            <div>
-                <p>@(i+1)  ) Titulo: <b>@Peliculas[i].Titulo</b></p>
-                <p>Fecha Lanzamiento: <b>@Peliculas[i].FechaLanzamiento.ToString("dd MM yyyy")</b></p>
-            </div>
+    <div>
+        <p>@(i + 1)) Título: @((MarkupString)Peliculas[i].Titulo)</p>
+        <p>Fecha Lanzamiento: <b>@Peliculas[i].FechaLanzamiento.ToString("dd MMM yyyy")</b></p>
+    </div>
         }
     </div>
 }
@@ -109,7 +109,7 @@ else
         // Peliculas = repositorio.ObtenerPeliculas();
 
         await Task.Delay(3000);
-        Peliculas = new List<Peliculas>();//ObtenerPeliculas();
+        Peliculas = ObtenerPeliculas();
 
     }
 
@@ -118,9 +118,9 @@ else
     {
         return new List<Peliculas>()
 {
-            new Peliculas(){Titulo="Spider-Man: Far From Home",FechaLanzamiento= new DateTime(2019,7,2)},
-            new Peliculas(){Titulo="Moana",FechaLanzamiento= new DateTime(2016,11,23)},
-            new Peliculas(){Titulo="Inceptio",FechaLanzamiento= new DateTime(2010,7,16)},
+            new Peliculas(){Titulo = "<b>Spider-Man</b>: Far From Home", FechaLanzamiento  = new DateTime(2019, 7, 2)},
+            new Peliculas(){Titulo = "<i>Moana</i>", FechaLanzamiento  = new DateTime(2016, 11, 23)},
+            new Peliculas(){Titulo = "Inception", FechaLanzamiento  = new DateTime(2010, 7, 16)}
         };
     }
 
