--- a/BlazorPeliculas/Client/Pages/Index.razor
+++ b/BlazorPeliculas/Client/Pages/Index.razor
@@ -8,7 +8,7 @@
 
 <hr />
 
-<ListadoPeliculas></ListadoPeliculas>
+<ListadoPeliculas Peliculas="ObtenerPeliculas()"></ListadoPeliculas>
 
 
 @code {
@@ -23,7 +23,7 @@
     {
         get { return ObtenerPelicula(); }
     }
-    
+
 
     private Peliculas ObtenerPelicula()
     {
@@ -31,6 +31,17 @@
         {
             Titulo = "Spider-Man: Far From Home",
             FechaLanzamiento = new DateTime(2019, 7, 2)
+        };
+    }
+
+
+    private new List<Peliculas> ObtenerPeliculas()
+    {
+        return new List<Peliculas>()
+{
+            new Peliculas(){Titulo = "<b>Spider-Man</b>: Far From Home", FechaLanzamiento  = new DateTime(2019, 7, 2)},
+            new Peliculas(){Titulo = "<i>Moana</i>", FechaLanzamiento  = new DateTime(2016, 11, 23)},
+            new Peliculas(){Titulo = "Inception", FechaLanzamiento  = new DateTime(2010, 7, 16)}
         };
     }
 
