--- a/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
+++ b/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
@@ -15,12 +15,9 @@ else
         <h3>Peliculas for</h3>
 
 
-        @foreach (var pelicla in Peliculas)
+        @foreach (var pelicula in Peliculas)
         {
-            <div>
-                <p>Titulo: <b>@pelicla.Titulo</b></p>
-                <p>Fecha Lanzamiento: <b>@pelicla.FechaLanzamiento.ToString("dd MM yyyy")</b></p>
-            </div>
+           <PeliculaIndividual Pelicula="pelicula" ></PeliculaIndividual>
         }
     </div>
 }
@@ -29,23 +26,15 @@ else
 
 
 
-    protected override async Task OnInitializedAsync()
-    {
-        // Peliculas = repositorio.ObtenerPeliculas();
+    //protected override async Task OnInitializedAsync()
+    //{
+    //    // Peliculas = repositorio.ObtenerPeliculas();
 
-        await Task.Delay(3000);
-        Peliculas = ObtenerPeliculas();
+    //    await Task.Delay(3000);
+    //    Peliculas = ObtenerPeliculas();
 
-    }
+    //}
 
-    public List<Peliculas> Peliculas;
-    private new List<Peliculas> ObtenerPeliculas()
-    {
-        return new List<Peliculas>()
-{
-            new Peliculas(){Titulo = "<b>Spider-Man</b>: Far From Home", FechaLanzamiento  = new DateTime(2019, 7, 2)},
-            new Peliculas(){Titulo = "<i>Moana</i>", FechaLanzamiento  = new DateTime(2016, 11, 23)},
-            new Peliculas(){Titulo = "Inception", FechaLanzamiento  = new DateTime(2010, 7, 16)}
-        };
-    }
+    [Parameter] public List<Peliculas> Peliculas { get; set; }
+
 }
