Video 24 Render Fragment

--- a/BlazorPeliculas/Client/Pages/Index.razor
+++ b/BlazorPeliculas/Client/Pages/Index.razor
@@ -8,7 +8,14 @@
 
 <hr />
 
-<ListadoPeliculas Peliculas="ObtenerPeliculas()"></ListadoPeliculas>
+<ListadoPeliculas Peliculas="ObtenerPeliculas()">
+    <Cargando>
+        <img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" />
+    </Cargando>
+    <NoHayRegistros>
+        <text>No hay peliculas para mostrar.</text>
+    </NoHayRegistros>    
+</ListadoPeliculas>
 
 
 <div>
