--- a/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
+++ b/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
@@ -4,12 +4,33 @@
 @if (Peliculas == null)
 
 {
-    <img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" />
-    <text>Cargando...</text>
+    @*<img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" />
+    <text>Cargando...</text>*@
+
+
+
+    @if(Cargando == null)
+    {
+        <text>Cargando...</text>
+    }
+    else
+    {
+        @Cargando
+    }
+
+
 }
 else if (Peliculas.Count() == 0)
 {
-    <text>No hay registros para mostrar.</text>
+    @if(NoHayRegistros == null)
+    {
+        <text>No hay registros para mostrar.</text>
+    }
+    else
+    {
+        @NoHayRegistros
+    }
+   
 }
 
 else
@@ -34,22 +55,20 @@ else
 
 @code{
 
-
-
-
-
     [Parameter] public List<Peliculas> Peliculas { get; set; }
+    [Parameter] public RenderFragment Cargando { get; set; }
+    [Parameter] public RenderFragment NoHayRegistros { get; set; }
+
     bool MostrarBotones = false;
 
- 
     //Peliculas pelicula = new Peliculas();
 
     async Task EliminarPelicula(Peliculas pelicula)
     {
-      
-            Peliculas.Remove(pelicula);
-            Console.WriteLine($"Se ha eliminado la pelicula {pelicula.Titulo}");
-      
+
+        Peliculas.Remove(pelicula);
+        Console.WriteLine($"Se ha eliminado la pelicula {pelicula.Titulo}");
+
     }
 
 }
