--- a/BlazorPeliculas/Client/Pages/Counter.razor
+++ b/BlazorPeliculas/Client/Pages/Counter.razor
@@ -1,8 +1,15 @@
 ﻿@page "/counter"
+@inject ServicioSingleton singleton
+@inject ServicioTransient transient
 
 <h1>Counter</h1>
 
 <p>Current count: @currentCount</p>
+<p>singleton count: @singleton.Valor</p>
+<p>transient count: @transient.Valor</p>
+
+
+
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
@@ -12,5 +19,8 @@
     private void IncrementCount()
     {
         currentCount++;
+        singleton.Valor = currentCount;
+        transient.Valor = currentCount;
+
     }
 }
