--- a/BlazorPeliculas/Client/Pages/Index.razor
+++ b/BlazorPeliculas/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IRepositorio repositorio
 
 
 
@@ -25,12 +26,7 @@
     protected override void OnInitialized()
     {
 
-        Peliculas = new List<Peliculas>()
-        {
-            new Peliculas(){Titulo = "Spider-Man: Far From Home", FechaLanzamiento  = new DateTime(2019, 7, 2)},
-            new Peliculas(){Titulo = "Moana", FechaLanzamiento  = new DateTime(2016, 11, 23)},
-            new Peliculas(){Titulo = "Inception", FechaLanzamiento  = new DateTime(2010, 7, 16)}
-        };
+        Peliculas = repositorio.ObtenrPeliculas();     
 
     }
 
