--- a/BlazorPeliculas/Client/_Imports.razor
+++ b/BlazorPeliculas/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using BlazorPeliculas.Client.Shared
 @using BlazorPeliculas.Client.Helpers@*//lo vuel egeneral para toda la aplicacion*@
 @using BlazorPeliculas.Shared.Entidades 
+@using BlazorPeliculas.Client.Repositorios
