--- a/BlazorPeliculas/Client/Pages/Counter.razor
+++ b/BlazorPeliculas/Client/Pages/Counter.razor
@@ -7,6 +7,6 @@
 <p>singleton count: @singleton.Valor</p>
 <p>transient count: @transient.Valor</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCountAsync">Click me</button>
 
 
