--- a/BlazorPeliculas/Client/Pages/Counter.razor
+++ b/BlazorPeliculas/Client/Pages/Counter.razor
@@ -10,3 +10,6 @@
 <button class="btn btn-primary" @onclick="IncrementCountAsync">Click me</button>
 
 
+<button class="btn btn-primary" @onclick="IncrementCountAsyncJavascript">Click me javascript</button>
+
+
