--- a/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
+++ b/BlazorPeliculas/Client/Shared/ListadoPeliculas.razor
@@ -14,55 +14,77 @@
         </ListadoGenerco>
     </div>
 
+<Confirmacion @ref="confirmacion" onConfirm="EliminarPeliculaConfirmacion" onCancel="onCancelConfirmacion" >
+        <div>Desea borrar la pelicula?</div>
+</Confirmacion>
 
 @code{ 
 
-    [Parameter] public List<Peliculas> Peliculas { get; set; }
+        Confirmacion confirmacion;
+
+        [Parameter] public List<Peliculas> Peliculas { get; set; }
 
 
-    //inicializar un componente
-    protected override void OnInitialized()
-    {
-        Console.WriteLine("OnInitialized");
-    }
-
-    //ejecutar una accion cada vez que se cambie un parametro
-    protected override void OnParametersSet()
-    {
-        Console.WriteLine("OnParametersSet");
-    }
-
-
-    //se ejecuta cuando se renderiza el html
-    protected override void OnAfterRender( bool primeraRenderizacion)
-    {
-        Console.WriteLine($"OnAfterRender: primera vez:{primeraRenderizacion}");
-    }
-
-
-    //indicar si se quiere renderizar un componete con unresepcto a un cambio realizado
-    protected override bool  ShouldRender()
-    {
-        Console.WriteLine("OnParametersSet");
-        return true;
-    }
-
-
-
-    bool MostrarBotones = false;
-
-    //Peliculas pelicula = new Peliculas();
-
-    async Task EliminarPelicula(Peliculas pelicula)
-    {
-
-        var confirmado = await js.Confirm( $"Desea borrar la pelicula {pelicula.Titulo}?");
-
-        if(confirmado)
+        //inicializar un componente
+        protected override void OnInitialized()
         {
-            Peliculas.Remove(pelicula);
-            Console.WriteLine($"Se ha eliminado la pelicula {pelicula.Titulo}");
+            Console.WriteLine("OnInitialized");
         }
 
-    }
+        //ejecutar una accion cada vez que se cambie un parametro
+        protected override void OnParametersSet()
+        {
+            Console.WriteLine("OnParametersSet");
+        }
+
+
+        //se ejecuta cuando se renderiza el html
+        protected override void OnAfterRender( bool primeraRenderizacion)
+        {
+            Console.WriteLine($"OnAfterRender: primera vez:{primeraRenderizacion}");
+        }
+
+
+        //indicar si se quiere renderizar un componete con unresepcto a un cambio realizado
+        protected override bool  ShouldRender()
+        {
+            Console.WriteLine("OnParametersSet");
+            return true;
+        }
+
+
+
+        bool MostrarBotones = false;
+
+        //Peliculas pelicula = new Peliculas();
+
+        async Task EliminarPelicula(Peliculas pelicula)
+        {
+            confirmacion.Mostrar();
+            peliculaABorrar = pelicula;
+
+            // var confirmado = await js.Confirm( $"Desea borrar la pelicula {pelicula.Titulo}?");
+
+            //if(confirmado)
+            //{
+            //    Peliculas.Remove(pelicula);
+            //    Console.WriteLine($"Se ha eliminado la pelicula {pelicula.Titulo}");
+            //}
+
+        }
+
+        Peliculas peliculaABorrar;
+
+        void EliminarPeliculaConfirmacion()
+        {
+            Peliculas.Remove(peliculaABorrar);
+            confirmacion.Ocultar();
+            peliculaABorrar = null;
+        }
+
+        void onCancelConfirmacion()
+        {
+            confirmacion.Ocultar();
+            peliculaABorrar = null;
+        }
     }
