Video  43 Limpieza de codigo y se agrego parametros quemados jarcodeados para mostrar peliculas con poster

--- a/BlazorPeliculas/Client/Pages/Counter.razor
+++ b/BlazorPeliculas/Client/Pages/Counter.razor
@@ -1,6 +1,6 @@
 ﻿@page "/counter"
 
-<h1 style="color: @appState.Color">Counter</h1>
+@*<h1 style="color: @appState.Color">Counter</h1>
 
 <div style="display:flex;">
     <div style="width: 150px">
@@ -19,10 +19,10 @@
     </div>
 </div>
 
-<p style="color: @appState.Color;font-size: @appState.Size">Current count: @currentCount</p>
+<p style="color: @appState.Color;font-size: @appState.Size">Current count: @currentCount</p>*@
 
 <p>Current count: @currentCount</p>
-<p>Singleton count: @singleton.Valor</p>
+<p>Singleton count: @singleton.Valor</
 <p>Transient count: @transient.Valor</p>
 
 <button class="btn btn-primary"
