--- a/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
+++ b/BlazorPeliculas/Client/Shared/PeliculaIndividual.razor
@@ -1,16 +1,17 @@
 ﻿
-<div>
-    <p>Titulo: <b>@Pelicula.Titulo</b></p>
-    <p>Fecha Lanzamiento: <b>@Pelicula.FechaLanzamiento.ToString("dd MM yyyy")</b></p>
-
-    @if (MostrarBotones)
-    {
-        <div>
-            <button @onclick="@(() => EliminarPelicula.InvokeAsync(Pelicula))">Borrar</button>
-        </div>
-    }
-
-
+<div style="margin-right:2%; margin-bottom:10px; text-align:center" >
+    <a>
+        <img  src="@Pelicula.Poster" style="width:225px; height:300px;"/>
+    </a>
+    <p style="max-width:225px; height:44px; font-size: 15px; font-weight:bold;" >
+        @Pelicula.TituloCortado
+    </p>
+    <div>
+        <a class="btn btn-info"  >Editar</a>
+        <button type="button" class="btn btn-danger"
+                @onclick="@(()=>EliminarPelicula.InvokeAsync(Pelicula))" 
+                >Borrar</button>
+    </div>
 </div>
 
 
@@ -18,7 +19,6 @@
     [Parameter] public Peliculas Pelicula { get; set; }
     [Parameter] public bool MostrarBotones { get; set; } = false;
     [Parameter] public EventCallback<Peliculas> EliminarPelicula { get; set; }
-
 
 
 }
