--- a/BlazorPeliculas/Client/Pages/Counter.razor
+++ b/BlazorPeliculas/Client/Pages/Counter.razor
@@ -22,7 +22,7 @@
 <p style="color: @appState.Color;font-size: @appState.Size">Current count: @currentCount</p>*@
 
 <p>Current count: @currentCount</p>
-<p>Singleton count: @singleton.Valor</
+<p>Singleton count: @singleton.Valor</p>
 <p>Transient count: @transient.Valor</p>
 
 <button class="btn btn-primary"
