--- a/BlazorPeliculas/Client/App.razor
+++ b/BlazorPeliculas/Client/App.razor
@@ -1,10 +1,33 @@
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+@inject LazyAssemblyLoader lazyLoader
+@using System.Reflection
+
+<Router AppAssembly="@typeof(Program).Assembly"
+        OnNavigateAsync="OnNavigateAsync"
+        PreferExactMatches="@true"        
+        AdditionalAssemblies="assemblies"
+        >
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-           <CustomNotFound> </CustomNotFound>
+            <CustomNotFound> </CustomNotFound>
         </LayoutView>
     </NotFound>
 </Router>
+@code {
+
+    private List<Assembly> assemblies = new List<Assembly>();
+
+
+    private async Task OnNavigateAsync(NavigationContext args)
+    {
+        if (args.Path.EndsWith("counter"))
+        {
+            var assembliesCargados = await lazyLoader.LoadAssembliesAsync(
+                new List<string> { "MathNet.Numerics.dll" });
+            assemblies.AddRange(assembliesCargados);
+        }
+    }
+
+}
