--- a/BlazorPeliculas/Client/_Imports.razor
+++ b/BlazorPeliculas/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorPeliculas.Client.Helpers@*//lo vuel egeneral para toda la aplicacion*@
 @using BlazorPeliculas.Shared.Entidades 
 @using BlazorPeliculas.Client.Repositorios
+@using Microsoft.AspNetCore.Components.WebAssembly.Services
