--- a/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
@@ -2,6 +2,29 @@
 
 <h3>CrearGenero</h3>
 
+<EditForm Model="Genero" OnSubmit="Crear" >
+    <div class="form-group">
+        <label>
+            Nombre:
+        </label>
+        <div>
+            <InputText  class="form-control" @bind-Value=@Genero.Nombre>  </InputText>
+        </div>
+
+    </div>
+    <button class="btn btn-success" type="submit" > Guardar  Cambios</button>
+
+</EditForm>
+
+
 @code {
+
+    private Generos Genero= new Generos();
+
+    private void Crear()
+    {
+        Console.WriteLine("Ejecutando método Crear");
+        Console.WriteLine($"Nombre del género: {Genero.Nombre}");
+    }
 
 }
