--- a/BlazorPeliculas/Client/Pages/Generos/IndiceGeneros.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/IndiceGeneros.razor
@@ -1,7 +1,10 @@
 ﻿@page "/generos"
 
-<h3>IndiceGeneros</h3>
+<h3>Indice Géneros</h3>
 
-@code {
 
-}
+<div class="form-group">
+    <a class="btn btn-info" href="generos/crear">Agregar Género</a>
+</div>
+
+@code { }
