Video 60 componente de seleccion multiple funcional

--- a/BlazorPeliculas/Client/Pages/Peliculas/EditarPelicula.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/EditarPelicula.razor
@@ -1,7 +1,42 @@
 ﻿@page "/peliculas/editar/{PeliculaId:int}"
 
-<h3>EditarPelicula</h3>
+<h3>Editar Pelicula</h3>
+
+
+<FormularioPeliculas Peliculas="Pelicula"  GenerosNoSeleccionados="GenerosNoSeleccionados" GenerosSeleccionados="GenerosSeleccionados"  OnValidSubmit="Editar"></FormularioPeliculas>
 
 @code {
     [Parameter] public int PeliculaId { get; set; }
+    Peliculas Pelicula = new Peliculas();
+    private List<Generos> GenerosNoSeleccionados = new List<Generos>();
+    private List<Generos> GenerosSeleccionados = new List<Generos>();
+
+    protected override void OnInitialized()
+    {
+        Pelicula = new Peliculas() { Id=PeliculaId, Titulo="Mi pelicula" };
+        GenerosNoSeleccionados = new List<Generos>()
+        {
+
+            new Generos(){Id=1,Nombre="Comedia"},
+            new Generos() { Id = 2, Nombre = "Drama" },
+            new Generos() { Id = 3, Nombre = "Acción" },
+            new Generos() { Id = 4, Nombre = "Dci-fi" },
+            new Generos() { Id = 5, Nombre = "Suspenso" },
+         };
+
+
+        GenerosSeleccionados = new List<Generos>()
+        {            
+            new Generos() { Id = 3, Nombre = "Acción" },
+            
+         };
+
+    }
+
+    private void Editar()
+    {
+        Console.WriteLine("Editando pelicula");
+    }
+
+
 }
