--- a/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
@@ -3,9 +3,26 @@
 
 <h3>CrearPelicula</h3>
 
-<button @onclick="Crear">Salvar Pelicula</button>
+<FormularioPeliculas Peliculas="Peliculas" OnValidSubmit="Crear" GenerosNoSeleccionados="GenerosNoseleccionados" ></FormularioPeliculas>
 
 @code {
+
+    private Peliculas Peliculas = new Peliculas();
+    private List<Generos> GenerosNoseleccionados = new List<Generos>();
+
+    protected override void OnInitialized()
+    {
+        GenerosNoseleccionados = new List<Generos>()
+        {
+
+            new Generos(){Id=1,Nombre="Comedia"},
+            new Generos() { Id = 2, Nombre = "Drama" },
+            new Generos() { Id = 3, Nombre = "Acción" },
+            new Generos() { Id = 4, Nombre = "Dci-fi" },
+            new Generos() { Id = 5, Nombre = "Suspenso" },
+         };
+    }
+
 
     void Crear()
     {
