--- a/BlazorPeliculas/Client/Pages/Personas/IndicePersonas.razor
+++ b/BlazorPeliculas/Client/Pages/Personas/IndicePersonas.razor
@@ -1,6 +1,10 @@
 ﻿@page "/personas"
 
-<h3>IndicePersonas</h3>
+<h3>Indice Personas</h3>
+
+<div class="form-group">
+    <a class="btn btn-info" href="personas/crear">Crear Persona</a>
+</div>
 
 @code {
 
