Video 61 componente seleccion multiple-typeahead(autocomplete)- arrastrar, buenisimo estudiar

--- a/BlazorPeliculas/Client/Pages/Peliculas/FormularioPeliculas.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/FormularioPeliculas.razor
@@ -44,7 +44,7 @@
                               NoSeleccionados="NoSeleccionados"></SelectorMultiple>
         </div>
     </div>
-    @*<div class="form-group">
+    <div class="form-group">
             <label>Actores:</label>
             <div>
                 <SelectorMultipleTypeahead Context="persona"
@@ -59,7 +59,7 @@
                     </MyResultTemplate>
                 </SelectorMultipleTypeahead>
             </div>
-        </div>*@
+        </div>
 
     <button type="submit" class="btn btn-success">Salvar Película</button>
 </EditForm>
@@ -98,5 +98,6 @@
             new Personas(){Id=1, Nombre="Tom Holland", Foto = "https://m.media-amazon.com/images/M/MV5BNTAzMzA3NjQwOF5BMl5BanBnXkFtZTgwMDUzODQ5MTI@._V1_UY317_CR23,0,214,317_AL_.jpg"},
             new Personas(){Id=2, Nombre="Tom Hanks", Foto = "https://m.media-amazon.com/images/M/MV5BMTQ2MjMwNDA3Nl5BMl5BanBnXkFtZTcwMTA2NDY3NQ@@._V1_UY317_CR2,0,214,317_AL_.jpg"}
         };
-    } }
+    }
+   }
 
