--- a/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
@@ -1,4 +1,6 @@
 ﻿@page "/generos/crear"
+@inject IRepositorio repositorio
+@inject NavigationManager navigation
 
 <h3>CrearGenero</h3>
 <FormularioGenero Genero="Genero" OnValidSubmit="Crear"  ></FormularioGenero>
@@ -7,10 +9,23 @@
 
     private Generos Genero = new Generos();
 
-    private void Crear()
+    private async Task Crear()
     {
         Console.WriteLine("Ejecutando método Crear");
         Console.WriteLine($"Nombre del género: {Genero.Nombre}");
+
+        var httpResponse = await repositorio.Post("api/generos", Genero);
+
+        if(httpResponse.Error)
+        {
+            var body = await httpResponse.HttpResponseMessage.Content.ReadAsStringAsync();
+            Console.WriteLine(body);
+        }
+        else
+        {
+            navigation.NavigateTo("/generos");
+        }
+
     }
 
 }
