--- a/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/CrearGenero.razor
@@ -1,31 +1,29 @@
 ﻿@page "/generos/crear"
 @inject IRepositorio repositorio
 @inject NavigationManager navigation
+@inject IMostrarMensajes mostrarMensajes
 
 <h3>CrearGenero</h3>
-<FormularioGenero Genero="Genero" OnValidSubmit="Crear"  ></FormularioGenero>
+<FormularioGenero Genero="Genero" OnValidSubmit="Crear"></FormularioGenero>
 
-@code {
+@code { private Generos Genero = new Generos();
 
-    private Generos Genero = new Generos();
+            private async Task Crear()
+            {
+                Console.WriteLine("Ejecutando método Crear");
+                Console.WriteLine($"Nombre del género: {Genero.Nombre}");
 
-    private async Task Crear()
-    {
-        Console.WriteLine("Ejecutando método Crear");
-        Console.WriteLine($"Nombre del género: {Genero.Nombre}");
+                var httpResponse = await repositorio.Post("api/generos", Genero);
 
-        var httpResponse = await repositorio.Post("api/generos", Genero);
+                if (httpResponse.Error)
+                {
+                    var body = await httpResponse.HttpResponseMessage.Content.ReadAsStringAsync();
+                    await mostrarMensajes.MostrarMensajeError(await httpResponse.GetBody());
+                    Console.WriteLine(body);
+                }
+                else
+                {
+                    navigation.NavigateTo("/generos");
+                }
 
-        if(httpResponse.Error)
-        {
-            var body = await httpResponse.HttpResponseMessage.Content.ReadAsStringAsync();
-            Console.WriteLine(body);
-        }
-        else
-        {
-            navigation.NavigateTo("/generos");
-        }
-
-    }
-
-}
+            } }
