--- a/BlazorPeliculas/Client/Pages/Generos/IndiceGeneros.razor
+++ b/BlazorPeliculas/Client/Pages/Generos/IndiceGeneros.razor
@@ -9,26 +9,30 @@
 </div>
 
 
-@*<table class="table table-striped">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Nombre</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Generos)
-        {
-<tr>
-    <td>
-        <a href="/generos/editar/@item.Id" class="btn btn-success">Editar</a>
-
-    </td>
-    <td>@item.Nombre</td>
-</tr>
-}
-    </tbody>
-</table>*@
+<ListadoGenerco Listado="Generos">
+    <HayRegistrosCompleto>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Nombre</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Generos)
+                {
+                    <tr>
+                        <td>
+                            <a href="/generos/editar/@item.Id" class="btn btn-success">Editar</a>
+                            @*<button @onclick="@(() => BorrarGenero(item))" class="btn btn-danger">Borrar</button>*@
+                        </td>
+                        <td>@item.Nombre</td>
+                    </tr>
+                  }
+            </tbody>
+        </table>
+    </HayRegistrosCompleto>
+</ListadoGenerco>
 
 
 
