--- a/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
+++ b/BlazorPeliculas/Client/Pages/Peliculas/CrearPelicula.razor
@@ -1,26 +1,31 @@
 ﻿@page "/peliculas/crear"
 @inject NavigationManager navigationManager
+@inject IRepositorio repositorio
 
 <h3>CrearPelicula</h3>
+@if(MostrarFormulario)
+{
+   <FormularioPeliculas Peliculas="Peliculas" OnValidSubmit="Crear" GenerosNoSeleccionados="GenerosNoseleccionados"></FormularioPeliculas>
+}
+else
+{
+    <text>Cargando...</text>
+}
 
-<FormularioPeliculas Peliculas="Peliculas" OnValidSubmit="Crear" GenerosNoSeleccionados="GenerosNoseleccionados" ></FormularioPeliculas>
 
-@code {
+
+
+
+@code { 
+    private bool MostrarFormulario { get; set; } = false;
 
     private Peliculas Peliculas = new Peliculas();
     private List<Generos> GenerosNoseleccionados = new List<Generos>();
 
-    protected override void OnInitialized()
+    protected async override Task OnInitializedAsync()
     {
-        GenerosNoseleccionados = new List<Generos>()
-        {
-
-            new Generos(){Id=1,Nombre="Comedia"},
-            new Generos() { Id = 2, Nombre = "Drama" },
-            new Generos() { Id = 3, Nombre = "Acción" },
-            new Generos() { Id = 4, Nombre = "Dci-fi" },
-            new Generos() { Id = 5, Nombre = "Suspenso" },
-         };
+        var responseHttp = await repositorio.Get<List<Generos>>("api/generos");
+        GenerosNoseleccionados = responseHttp.Response;
     }
 
 
@@ -29,5 +34,4 @@
         Console.WriteLine(navigationManager.Uri);
         navigationManager.NavigateTo("pelicula");
     }
-
-}
+ }
