--- a/BlazorPeliculas/Client/Shared/ListadoGenerco.razor
+++ b/BlazorPeliculas/Client/Shared/ListadoGenerco.razor
@@ -25,9 +25,16 @@ else if (Listado.Count() == 0)
 }
 else
 {
-    @foreach (var item in Listado)
+    if (HayRegistros != null)
     {
-        @HayRegistros(item)
+        foreach (var elemento in Listado)
+        {
+            @HayRegistros(elemento)
+        }
+    }
+    else
+    {
+        @HayRegistrosCompleto
     }
 }
 
@@ -35,5 +42,6 @@ else
     [Parameter] public RenderFragment Cargando { get; set; }
     [Parameter] public RenderFragment NoHayRegistros { get; set; }
     [Parameter] public RenderFragment<Titem> HayRegistros { get; set; }
+    [Parameter] public RenderFragment HayRegistrosCompleto { get; set; }
     [Parameter] public List<Titem> Listado { get; set; }
 }
