--- a/BlazorPeliculas/Client/_Imports.razor
+++ b/BlazorPeliculas/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using BlazorPeliculas.Client
 @using BlazorPeliculas.Client.Shared
 @using BlazorPeliculas.Client.Helpers@*//lo vuel egeneral para toda la aplicacion*@
-@using BlazorPeliculas.Shared.Entidades 
+@using BlazorPeliculas.Shared.Entidades
 @using BlazorPeliculas.Client.Repositorios
 @using Microsoft.AspNetCore.Components.WebAssembly.Services
+@using BlazorPeliculas.Shared.DTOs
